# qwen-chat-cli

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/openai_chat/: api_structures.rs  mod.rs
