[package]
name = "qwen-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
termimad = "0.31.2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = "1.0.219"
base64 = "0.22.1"
infer = "0.19.0"
arboard = "3.4.1"
image = "0.25.6"
dotenv = "0.15.0"

